change(files): update webportfolio

--- a/index.html
+++ b/index.html
@@ -7,12 +7,6 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" integrity="sha384-3AB7yXWz4OeoZcPbieVW64vVXEwADiYyAEhwilzWsLw+9FgqpyjjStpPnpBO8o8S" crossorigin="anonymous">
   <link rel="stylesheet" href="assets/css/style.css">
   <title>Robson Formigão</title>
-  <style>
-      #map {
-       height: 400px;
-       width: 100%;
-      }
-   </style>
 </head>
 <body>
 
@@ -46,7 +40,7 @@
 
   <main class="main">
     <section class="about">
-      <h1 class="about_title">Sobre</h1>
+      <h1 class="about_title">Quem sou eu?</h1>
       <div class="about_content">
         <div class="about_content-text">
           <p>
@@ -131,7 +125,7 @@
       </header>
       <div class="school_content">
         <figure><img src="assets/img/fatec.png" alt=""></figure>
-        <div id="map"></div>
+        <div class="school_content-map" id="map"></div>
       </div>
     </section>
 
